# rclean

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPROVEMENTS.md  README.md  TODO.md  cargo-clean-recursive.sh
docs/: DEPENDENCY_CLEANING.md
src/: deps.rs  main.rs  project.rs
